fix: expansion header text align

--- a/src/app/dashboard/components/wrapper/wrapper.component.scss
+++ b/src/app/dashboard/components/wrapper/wrapper.component.scss
@@ -43,4 +43,9 @@ mat-toolbar.mat-primary {
   justify-content: center;
 }
 
+.header-text {
+  justify-content: center;
+  margin-left: 7px;
+}
+
 
